# poptimizer

./: .coveragerc  .dockerignore  .env.template  .gitignore  .travis.yml  Dockerfile  Plan.excalidraw  README.md  README.rst  Taskfile.yml  bcs_parse.ipynb  db_recover.sh  docker-compose.yml  makefile  optimize.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  test.yml  tests.yml
bcs/: bcs.xlsx  div_comp.py
cfg/: cfg.yaml.template
config/: config.template
data/: .env.template  .golangci.yaml  README.md  data.mdb  dividends.db  go.mod  go.sum  lock.mdb  makefile
data/cmd/: main.go
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--3939830222082828629.wt  collection-0-219741207677660066.wt  collection-0-4129175164269415775.wt  collection-0-4770696416650365682.wt  collection-0-7795520399541399805.wt  collection-10-4129175164269415775.wt  collection-2-219741207677660066.wt  collection-2-4129175164269415775.wt  collection-2-4770696416650365682.wt  collection-2-7795520399541399805.wt  collection-35-4770696416650365682.wt  collection-37-4770696416650365682.wt  collection-4-4129175164269415775.wt  collection-4-4770696416650365682.wt  collection-4-7795520399541399805.wt  collection-8-219741207677660066.wt  collection-8-4129175164269415775.wt  collection-8-7795520399541399805.wt  index-1--3939830222082828629.wt  index-1-219741207677660066.wt  index-1-4129175164269415775.wt  index-1-4770696416650365682.wt  index-1-7795520399541399805.wt  index-11-4129175164269415775.wt  index-3-219741207677660066.wt  index-3-4129175164269415775.wt  index-3-4770696416650365682.wt  index-3-7795520399541399805.wt  index-36-4770696416650365682.wt  index-38-4770696416650365682.wt  index-5-4129175164269415775.wt  index-5-4770696416650365682.wt  index-5-7795520399541399805.wt  index-6-219741207677660066.wt  index-6-4129175164269415775.wt  index-6-4770696416650365682.wt  index-6-7795520399541399805.wt  (+5 more)
db/admin/: collection-0--2357352090101428430.wt  index-1--2357352090101428430.wt
db/config/: collection-4--2357352090101428430.wt  index-5--2357352090101428430.wt  index-6--2357352090101428430.wt
db/data/: collection-0--1223828191982046683.wt  collection-0--1425999753307428338.wt  collection-0--3322333856839344969.wt  collection-0--6202796444830703062.wt  collection-0--8520294920266414575.wt  collection-0-38793921252899771.wt  collection-8--2357352090101428430.wt  index-1--1223828191982046683.wt  index-1--1425999753307428338.wt  index-1--3322333856839344969.wt  index-1--6202796444830703062.wt  index-1--8520294920266414575.wt  index-1-2643661130275026519.wt  index-1-38793921252899771.wt  index-9--2357352090101428430.wt
db/diagnostic.data/: metrics.2019-09-04T12-30-02Z-00000  metrics.2019-09-05T19-51-56Z-00000  metrics.2019-09-06T09-05-24Z-00000  metrics.2019-09-06T09-13-36Z-00000  metrics.2019-09-06T09-15-10Z-00000  metrics.2019-09-06T09-31-47Z-00000  metrics.2019-09-06T09-50-25Z-00000  metrics.2019-09-06T10-18-37Z-00000  metrics.2019-09-06T12-54-03Z-00000  metrics.2019-09-06T13-16-31Z-00000  metrics.2019-09-06T13-17-06Z-00000  metrics.2019-09-06T13-17-48Z-00000  metrics.2019-09-06T13-19-31Z-00000  metrics.2019-09-06T13-27-33Z-00000  metrics.2019-09-06T13-28-14Z-00000  metrics.2019-09-06T13-29-45Z-00000  metrics.2019-09-06T13-31-18Z-00000  metrics.2019-09-06T13-44-02Z-00000  metrics.2019-09-06T13-44-42Z-00000  metrics.2019-09-06T13-47-35Z-00000  metrics.2019-09-06T16-47-02Z-00000  metrics.2019-09-06T16-47-08Z-00000  metrics.2019-09-06T16-55-51Z-00000  metrics.2019-09-06T16-57-58Z-00000  metrics.2019-09-06T17-02-26Z-00000  metrics.2019-09-06T17-04-57Z-00000  metrics.interim
db/local/: collection-2--2357352090101428430.wt  index-3--2357352090101428430.wt
db/source/: collection-0--6136986474316067480.wt  index-0-3704754383672595368.wt  index-1--6136986474316067480.wt  index-2--6136986474316067480.wt  index-4--6136986474316067480.wt
db_scripts/: recover.sh  stop.sh
docs/: DAG.excalidraw  FSM.excalidraw  Makefile  change_log.rst  conf.py  fsm.excalidraw  getting_started.rst  index.html  index.rst  msg.excalidraw  struct.rst  tech.md
dump/: dividends.bson  dividends.json
dump/data_new/: raw_div.bson
dump/source/: dividends.bson  dividends.metadata.json
evolve/: README.md  makefile  pyproject.toml  setup.cfg
evolve/evolve/: __init__.py  __main__.py
frontend/: .eslintrc.cjs  .prettierrc  eslint.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
opt/: .golangci.yaml  README.md  go.mod  go.sum  makefile
opt/cmd/: main.go
opt/web/: spa.go
poptimizer/: __init__.py  __main__.py  app.py  cmd.py  config.py  conftest.py  consts.py  errors.py  exceptions.py  labels.py  lgr.py  misc.py  server.py  utils.py
poptimizer/actors/: actor.py  actors.py  migrations.py  run.py  runner.py  system.py  tx.py  uow.py
poptimizer/adapter/: adapter.py  bus.py  http.py  lgr.py  mongo.py  telegram.py
poptimizer/adapters/: __init__.py  adapter.py  backup.py  ctx.py  dag.py  errors.py  events.py  fsm.py  gmail.py  http.py  http_session.py  lgr.py  logger.py  message.py  migration.py  migrations.py  moex.py  mongo.py  msg.py  repo.py  server.py  telegram.py  tinkoff.py  uow.py  warn.py
poptimizer/app/: __init__.py  app.py  config.py  dag.py  data.py  evolution.py  evolve.py  fsm.py  optimization.py  portfolio.py  resources.py  run.py  server.py  uow.py  updater.py  workers.py
poptimizer/cli/: app.py  config.py  div.py  feat.py  income.py  keychain.py  metrics.py  pdf.py  portfolio.py  report.py  risk.py  safe.py  stats.py  stats.py_  tinkoff.py
poptimizer/clients/: cpi.py  data.py  reestry.py  status.py  tinkoff.py
poptimizer/cmd/: data.py
poptimizer/controllers/: middleware.py  portfolio.py  server.py
poptimizer/core/: __init__.py  actors.py  adapters.py  backup.py  consts.py  domain.py  errors.py  fsm.py  (+6 more)
portfolio/: base.yaml  dividend_port.yaml
static/: apps.js  index.html  spa.css
tmp/: comp.py  comp.txt
(+1652 files in other folders)
